--- a/server/config/.env.example
+++ b/server/config/.env.example
@@ -1,2 +1,3 @@
 PORT = 8000
 MONGO_DB_URI = "mongodb+srv://bestin_38:mypwD1234@cluster0.wzhxc.mongodb.net/ojcprojects?retryWrites=true&w=majority"
+SECRET = "thisis007secretkey"
